Metal ANGLE non-blockers: Fix webgl/1.0.3/conformance/uniforms/uniform-default-values.html, Stencil debug layer assertions https://bugs.webkit.org/show_bug.cgi?id=223667

https://bugs.webkit.org/show_bug.cgi?id=223667

On Release, uniformDefaultValues was resetting program memory
either early, or oddly. Since program reflection should be constant
per Shader anyway, drop the 'reset' after assigning reflection data.

In addition, clamp stencil rectangle to always be within framebuffer bounds. Code taken from upstream ANGLE.

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-03-24
Reviewed by Dean Jackson.

* src/libANGLE/renderer/metal/ProgramMtl.mm:
(rx::ProgramMtl::linkImplDirect):
* src/libANGLE/renderer/metal/mtl_command_buffer.mm:
(rx::mtl::RenderCommandEncoder::initAttachmentWriteDependencyAndScissorRect):
(rx::mtl::RenderCommandEncoder::restart):
(rx::mtl::RenderCommandEncoder::setScissorRect):
* src/libANGLE/renderer/metal/mtl_glslang_mtl_utils.mm:
(rx::mtl::TranslatedShaderInfo::reset):
(rx::mtl::GlslangGetMSL):

Canonical link: https://commits.webkit.org/235745@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275012 268f45cc-cd09-0410-ab3c-d52691b4dbfc